package dev.coppola.RegisterSystem.console.api;

import lombok.Data;

@Data
public class DeleteResponse {
    private String message;
}
