package dev.coppola.RegisterSystem.rest.api;

public class LoginRequest extends UserRequest{
}
