package dev.coppola.RegisterSystem.rest.api;

public class RegisterRequest extends UserRequest{
}
