package dev.coppola.RegisterSystem.rest.api;

import lombok.Data;

@Data
public class RegisterResponse {
    private String message;
    private String registeredOn;
}
